- letter spacing fix

--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -31,7 +31,7 @@
   +mada-regular(1.2em)
   color: white
   text-transform: uppercase
-  letter-spacing: -1px
+  letter-spacing: -0.25
   width: 100%
   height: 100%
 
@@ -71,6 +71,7 @@
     text-decoration: none
     +mada-light(1.4em)
     text-transform: uppercase
+    letter-spacing: 0.25
     padding: 3.38% 50px 3.38% 0
 
     &::before
@@ -92,6 +93,7 @@
   text-transform: uppercase
   align-self: center
   color: $text-dark-grey
+  letter-spacing: -0.25
 
   & > :first-child
     display: block
